# airdash

./: .gitignore  LICENSE  README.md  pyproject.toml
src/airdash/: __init__.py  airflow.py  app.py  config.py
