[project]
name = "airdash"
version = "0.1.0"
description = "A minimal terminal UI for Apache Airflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow-client>=3.2.0",
    "textual>=8.0.0",
]

[project.scripts]
airdash = "airdash.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airdash"]
